package structural.adapter;

public interface Adapter {
    String convert();
}
