package structural.adapter;

public interface AmazonItem {
    String getPrice();
}
